--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -5,4 +5,21 @@ body,
   height: 100%;
   padding: 0;
   margin: 0;
+  font-family: 'Microsoft YaHei';
+  font-size: 14px;
+}
+
+.pull-left { float: left; }
+.pull-right { float: right; }
+
+
+/* 修改 elementui 样式 */
+.el-submenu .el-menu-item {
+  font-size: 14px;
+  padding-left: 50px !important;
+}
+
+.el-submenu .el-menu-item.is-active {
+  /* background-color: rgba(245, 108, 108, 0.2) !important; */
+  background-color: #328cf0 !important;
 }
