--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -23,7 +23,7 @@ body,
   background-color: #328cf0 !important;
 }
 .el-pagination {
-  margin: 15px 15px 0 0;
+  margin: 30px 15px 30px 0;
   padding:0;
 }
 
